# VisioMatch

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: arcface.rs  camera.rs  detect.rs  enroll.rs  hands.rs  main.rs  recognize.rs  setup.rs  tracker.rs
